Commit 4ta entrega proyecto final

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Inicio</title>
+    <meta name="description" content="Encuentra todas las plantas de tu interés y descubre lo que necesitas saber acerca de sus cuidados, realiza seguimientos, programa recordatorios y más…">
+    <meta name="keywords" content="PLANTAS, BUSCADOR, RECORDATORIOS, CARACTERÍSTICAS, RIEGOS, SUSTRATOS, BOTÁNICA, ESCÁNER">
 </head>
 
 <body>
@@ -55,7 +57,7 @@
     <main>
         <div class="header-bg">
             <div class="container-xxl text-center">
-                <h1 class="con-w">Buscador de bibliotecas de plantas</h1>
+                <h1 class="con-w">Biblioteca de Plantas</h1>
                 <br>
                 <p class="con-w">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
                     book.
@@ -167,9 +169,9 @@
         </div>
         <div class="container-xxl">
             <br><br>
-            <h3>
+            <h2>
                 Más populares
-            </h3>
+            </h2>
             <br>
             <div class="row row-cols-1 row-cols-md-4 g-4">
                 <div class="col">
@@ -219,9 +221,9 @@
             </div>
             <br>
             <br>
-            <h3>
+            <h2>
                 Mejor Valoradas
-            </h3>
+            </h2>
             <br>
             <div class="row row-cols-1 row-cols-md-4 g-4">
                 <div class="col">
@@ -271,9 +273,9 @@
             </div>
             <br>
             <br>
-            <h3>
+            <h2>
                 Todas
-            </h3>
+            </h2>
             <br>
             <div class="row row-cols-1 row-cols-md-4 g-4">
                 <div class="col">
@@ -376,10 +378,10 @@
             <div class="align-items-center">
                 <div class="row">
                     <div class="col-sm-2 align-middle">
-                        <div>
+                        <div class="container">
                             <img src="./img/logo.svg" alt="">
                         </div>
-                        <div>
+                        <div class="container">
                             <h5>Síguenos</h5>
                             <img src="img\circle.png" alt="r-1">
                             <img src="img\circle.png" alt="r-2">
