--- a/internal-pages/agenda.html
+++ b/internal-pages/agenda.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Agenda</title>
+    <meta name="description" content="Realiza seguimiento, guarda tus plantas, mantén al día sus cuidados, registra riegos, cambios de macetas, cambios de sustratos">
+    <meta name="keywords" content="PLANTAS, BUSCADOR, RESULTADOS, DETALLES, CARACTERÍSTICAS, DETALLES">
 </head>
 
 <body>
@@ -55,9 +57,9 @@
         <!-- Seguir buscando -->
         <div class="bg-border-menu">
             <div class="container p-search">
-                <h3>
+                <h1>
                     Seguir buscando..
-                </h3>
+                </h1>
                 <input class="inp-g" type="search" placeholder="Buscar por: nombre, autor...">
             </div>
         </div>
@@ -147,7 +149,7 @@
                                     <input type="radio" name="podar" value="" checked><br><br>
                                     <label for="coment">Añadir nueva descripción o comentario</label><br><br>
                                     <textarea name="coment" id="coment" cols="30" rows="10"></textarea><br><br>
-                                    <input type="submit" value="Guardar">
+                                    <input class="btn-style" type="submit" value="Guardar">
                                 </form>
                             </div>
                             <!-- Galeria de imagenes -->
@@ -178,7 +180,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
