--- a/internal-pages/agenda/inventario.html
+++ b/internal-pages/agenda/inventario.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Inventario</title>
+    <meta name="description" content="Guarda tus plantas y realiza seguimiento de ellas">
+    <meta name="keywords" content="PLANTAS, INVENTARIO, DETALLE, CUIDADOS">
 </head>
 
 <body>
@@ -55,9 +57,9 @@
         <!-- Seguir buscando -->
         <div class="bg-border-menu">
             <div class="container p-search">
-                <h3>
+                <h1>
                     Seguir buscando..
-                </h3>
+                </h1>
                 <input class="inp-g" type="search" placeholder="Buscar por: nombre, autor...">
             </div>
         </div>
@@ -76,7 +78,7 @@
                     <div class="col-sm-10 bg-border-menu">
                         <div class="row">
                             <div>
-                                <h3>Mis plantas</h3>
+                                <h2>Mis plantas</h2>
                                 <hr>
                             </div>
                             <div class="row row-cols-md-3">
@@ -94,6 +96,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="space-inv">
+
                 </div>
             </div>
         </div>
