--- a/internal-pages/agenda/login.html
+++ b/internal-pages/agenda/login.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Ingresa</title>
+    <meta name="description" content="Ingresa y mantén al día todos los progresos de tus plantas">
+    <meta name="keywords" content="PLANTAS, INGRESA, PROGRESOS">
 </head>
 
 <body>
@@ -53,7 +55,7 @@
     </header>
     <main>
         <div class="container-xxl sp-bt">
-            <h4>Continua disfrutando de nuestro buscador...</h4>
+            <h1>Continua disfrutando de nuestro buscador...</h1>
         </div>
         <div class="container-xxl bg-ric">
             <h5>Bienvenido nuevamente,</h5>
@@ -72,9 +74,9 @@
                     <br>
                     <br>
                 </div>
-                <button>Iniciar Sesion</button><br>
+                <button class="btn-style">Iniciar Sesion</button><br>
                 <br>
-                <button>iniciar sesión con google</button><br>
+                <button class="btn-style">iniciar sesión con google</button><br>
                 <br>
                 <p>¿No tienes cuenta? <a href="register.html">Regístrate</a></p>
             </form>
