--- a/internal-pages/agenda/perfil.html
+++ b/internal-pages/agenda/perfil.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Perfil</title>
+    <meta name="description" content="Guarda y administra la información personal para que puedas ver el historial y progreso de tu cuenta en Plants">
+    <meta name="keywords" content="PLANTAS, PERFIL, INFORMACIÓN, HISTORIAL">
 </head>
 
 <body>
@@ -55,9 +57,9 @@
         <!-- Seguir buscando -->
         <div class="bg-border-menu">
             <div class="container p-search">
-                <h3>
+                <h1>
                     Seguir buscando..
-                </h3>
+                </h1>
                 <input class="inp-g" type="search" placeholder="Buscar por: nombre, autor...">
             </div>
         </div>
@@ -117,6 +119,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="space-perfil">
+
                 </div>
             </div>
     </main>
