--- a/internal-pages/agenda/recordatorio.html
+++ b/internal-pages/agenda/recordatorio.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Recordatorios</title>
+    <meta name="description" content="Programa tus próximos riegos y cuidados que tus plantas necesitan para un sano y óptimo desarrollo">
+    <meta name="keywords" content="PLANTAS, RECORDATORIOS, RIEGOS, MACETAS, SUSTRATOS, CUIDADOS">
 </head>
 
 <body>
@@ -55,9 +57,9 @@
         <!-- Seguir buscando -->
         <div class="bg-border-menu">
             <div class="container p-search">
-                <h3>
+                <h1>
                     Seguir buscando..
-                </h3>
+                </h1>
                 <input class="inp-g" type="search" placeholder="Buscar por: nombre, autor...">
             </div>
         </div>
@@ -82,6 +84,8 @@
                             </div>
                             <div class="col-sm-6 d-flex flex-row-reverse align-items-center">
                                 <button class="align-middle"> Añadir nuevo</button>
+                                <br>
+                                <br>
                             </div>
                             <hr>
                         </div>
@@ -91,15 +95,17 @@
                                 <h3>06:00 am</h3>
                                 <p>Repetir: Semanalmente</p>
                             </div>
-                            <div class="col-sm-6 d-flex justify-content-end align-middle align-items-center">
-                                <button><img src="../../img/edit.svg" alt=""></button>
-                                <button><img src="../../img/delete.svg" alt=""></button>
-                                <button>Desactivar</button>
+                            <div class="col-sm-6 d-flex justify-content-end align-middle align-items-cente">
+                                <button class="space-b"><img src="../../img/edit.svg" alt=""></button>
+                                <button class="space-b"><img src="../../img/delete.svg" alt=""></button>
+                                <button class="space-b">Desactivar</button>
                             </div>
                         </div>
                     </div>
-
                 </div>
+            </div>
+            <div class="space-br">
+
             </div>
         </div>
     </main>
