--- a/internal-pages/agenda/register.html
+++ b/internal-pages/agenda/register.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Registro</title>
+    <meta name="description" content="Regístrate y guarda todos tus progresos para que continúes disfrutando del desarrollo de tu planta de forma ordenada">
+    <meta name="keywords" content="PLANTAS, REGISTRO">
 </head>
 
 <body>
@@ -53,7 +55,7 @@
     </header>
     <main>
         <div class="container-xxl sp-bt">
-            <h4>Continua disfrutando de nuestro buscador...</h4>
+            <h1>Continua disfrutando de nuestro buscador...</h1>
         </div>
         <div class="container-xxl bg-ric">
             <div>
