--- a/internal-pages/contacto.html
+++ b/internal-pages/contacto.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Contacto</title>
+    <meta name="description" content="¿Tienes algún comentario, duda o sugerencia referente a tus plantas? Simplemente contáctanos y atenderemos tu solicitud">
+    <meta name="keywords" content="PLANTAS, CONTACTO, MENSAJE, EMAIL">
 </head>
 
 <body>
@@ -80,16 +82,14 @@
                                 <br>
                                 <label for="terminos">Acepto términos y condiciones</label>
                                 <input type="checkbox" name="terminos" value="1"><br><br>
-                                <input type="reset" value="limpiar formulario">
-                                <input type="submit" value="Enviar Formulario">
+                                <input class="btn-style" type="reset" value="limpiar formulario">
+                                <input class="btn-style" type="submit" value="Enviar Formulario">
                                 <br>
                                 <br>
                             </div>
                         </form>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </main>
