--- a/internal-pages/detalle.html
+++ b/internal-pages/detalle.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Detalle de la planta</title>
+    <meta name="description" content="Toda la información que necesitas saber acerca de tu planta, cuidados, riegos, etapa, nivel de dificultad y más">
+    <meta name="keywords" content="PLANTAS, INFORMACIÓN, DETALLE, CUIDADOS, RIEGOS, ETAPAS">
 </head>
 
 <body>
@@ -55,9 +57,9 @@
         <!-- Seguir buscando -->
         <div class="bg-border-menu">
             <div class="container-xxl p-search">
-                <h3>
+                <h1>
                     Seguir buscando..
-                </h3>
+                </h1>
                 <input class="inp-g" type="search" placeholder="Buscar por: nombre, autor...">
             </div>
         </div>
@@ -154,36 +156,37 @@
             </div>
         </div>
         <!-- Otras características -->
-        <div class="container-xxl content-d">
-            <div class="">
-                <h2 class="text-center">Otras características</h2>
-                <br>
-                <br>
-                <div class="row align-items-start text-center">
-                    <div class="col in-text ">
-                        <img src="../img/circle.png " alt="icono "><br>
-                        <h5>Reproducción</h5>
-                        <p>lorem Ipsum is simply dummy text</p>
-                    </div>
-                    <div class="col in-text ">
-                        <img src="../img/circle.png " alt="icono "><br>
-                        <h5>Sustratos</h5>
-                        <p>lorem Ipsum is simply dummy text</p>
-                    </div>
-                    <div class="col in-text ">
-                        <img src="../img/circle.png " alt="icono "><br>
-                        <h5>Nutrientes</h5>
-                        <p>lorem Ipsum is simply dummy text</p>
-                    </div>
-                    <div class="col in-text ">
-                        <img src="../img/circle.png " alt="icono "><br>
-                        <h5>Enfermedades</h5>
-                        <p>lorem Ipsum is simply dummy text</p>
+        <div class="bg-car">
+            <div class="container-xxl content-d">
+                <div class="">
+                    <h2 class="text-center">Otras características</h2>
+                    <br>
+                    <br>
+                    <div class="row align-items-start text-center">
+                        <div class="col in-text ">
+                            <img src="../img/circle.png " alt="icono "><br>
+                            <h5>Reproducción</h5>
+                            <p>lorem Ipsum is simply dummy text</p>
+                        </div>
+                        <div class="col in-text ">
+                            <img src="../img/circle.png " alt="icono "><br>
+                            <h5>Sustratos</h5>
+                            <p>lorem Ipsum is simply dummy text</p>
+                        </div>
+                        <div class="col in-text ">
+                            <img src="../img/circle.png " alt="icono "><br>
+                            <h5>Nutrientes</h5>
+                            <p>lorem Ipsum is simply dummy text</p>
+                        </div>
+                        <div class="col in-text ">
+                            <img src="../img/circle.png " alt="icono "><br>
+                            <h5>Enfermedades</h5>
+                            <p>lorem Ipsum is simply dummy text</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
         <div class="container content-d">
             <div class="row align-items-center ">
                 <div class="col ">
@@ -195,40 +198,43 @@
                 </div>
             </div>
         </div>
-        <div id="q-c" class="container">
-            <div>
+        <div class="bg-car">
+            <div id="q-c" class="container">
                 <div>
-                    <h2>Experiencia de uso</h2>
-                    <br>
-                </div>
-                <div class="row">
-                    <div class="col content-d">
-                        <h3>Comentarios</h3>
-                        <br>
-                        <h4>Nombre del usuario</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                            specimen book.
-                        </p>
-                        <br>
-                        <button>Preguntar</button>
-                        <button>Comentar</button>
+                    <div>
+                        <h2>Experiencia de uso</h2>
                         <br>
                     </div>
-                    <div class="col content-d">
-                        <h3>Preguntas</h3>
-                        <br>
-                        <h4>Nombre del usuario</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                            specimen book.
-                        </p>
-                        <br>
-                        <button>Preguntar</button>
-                        <button>Comentar</button>
-                        <br>
+                    <div class="row">
+                        <div class="col content-d">
+                            <h3>Comentarios</h3>
+                            <br>
+                            <h4>Nombre del usuario</h4>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+                                a type specimen book.
+                            </p>
+                            <br>
+                            <button>Preguntar</button>
+                            <button>Comentar</button>
+                            <br>
+                        </div>
+                        <div class="col content-d">
+                            <h3>Preguntas</h3>
+                            <br>
+                            <h4>Nombre del usuario</h4>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+                                a type specimen book.
+                            </p>
+                            <br>
+                            <button>Preguntar</button>
+                            <button>Comentar</button>
+                            <br>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="container content-d">
             <h3>
                 Ver otras familias
