--- a/internal-pages/nosotros.html
+++ b/internal-pages/nosotros.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Acerca de nosotros</title>
+    <meta name="description" content="Queremos brindarte toda la información necesaria para el sano desarrollo y crecimiento de tu planta">
+    <meta name="keywords" content="PLANTAS, MISIÓN, VISIÓN, OBJETIVOS">
 </head>
 
 <body>
