--- a/internal-pages/search-results.html
+++ b/internal-pages/search-results.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Resultados de busqueda</title>
+    <meta name="description" content="Descubre y encuetra todas las plantas en Plants">
+    <meta name="keywords" content="PLANTAS, BUSCADOR, RESULTADOS, DETALLES">
 </head>
 
 <body>
@@ -57,9 +59,9 @@
         <!-- Seguir buscando -->
         <div class="bg-border-menu">
             <div class="container-xxl p-search">
-                <h3>
+                <h1>
                     Seguir buscando..
-                </h3>
+                </h1>
                 <input class="inp-g" type="search" placeholder="Buscar por: nombre, autor...">
             </div>
         </div>
