--- a/internal-pages/escanear.html
+++ b/internal-pages/escanear.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Escanear</title>
+    <meta name="description" content="Descubre e identifica esas características peculiares que hacen únicas cada especie de planta">
+    <meta name="keywords" content="PLANTAS, ESCÁNER, FOTOS, CARACTERÍSTICAS, CUIDADOS, IDENTIFICADOR">
 </head>
 
 <body>
@@ -55,20 +57,20 @@
         <!-- Seguir buscando -->
         <div class="bg-border-menu">
             <div class="container-xxl p-search">
-                <h3>
+                <h1>
                     Seguir buscando..
-                </h3>
+                </h1>
                 <input class="inp-g" type="search" placeholder="Buscar por: nombre, autor...">
             </div>
         </div>
-        <div class="container-xxl">
+        <div class="container-xxl content-d">
             <br>
             <div>
                 <h3>Plantas del mundo</h3>
                 <br>
             </div>
 
-            <div class="i-escaner">
+            <div class="bg-ric">
                 <h4>Busca una planta por foto</h4>
                 <br>
                 <p class="pp-es">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
@@ -80,6 +82,9 @@
                         </div>
                     </div>
                 </form>
+            </div>
+            <div class="space-sc">
+
             </div>
         </div>
     </main>
